
0.75
    - fixed some Clang warnings
    - added CMake support
    - added .gitignore
    - added .clang-tidy
    - fixed some clang-tidy warnings
    - fixed Cppcheck warnings
    - fixed some CLion inspection warnings
    - added some missing pointer checks
    - fixed Visual Studio compilation issues
    - added README.md and CONFIG.md (based on the MESS Wiki documentation)
    - temporarily re-added iconv files to allow Visual Studio compilation
    - fixed MinGW compilation
    - removed obsolete create_release.bat and kzip.exe
    - removed dirent.h from distribution and fetch it in Visual Studio CMake build instead
    - updated dirent.h to 1.23.2
    - updated copyright year
    - removed Visual Studio files as they can be generated via CMake
    - use conan for external dependencies on Windows
    - removed external libraries from distribution
    - add CMake option "USE_CONAN" to specify if conan should be used for external dependencies (defaults to ON on Windows and OFF on all other platforms)
    - properly include external includes
    - use static libraries on Windows
    - adjusted library dependencies
    - updated libxml2 to 2.9.9 (conan only)
    - added some more "xpath_expr" examples to mame_regtest.xml
    - support -listxml format of combined MAME/MESS
    - added "hack_driver_root" to use old MAME/MESS specific -listxml node names
    - disabled "test_frontend" and executable existence check when "no_execution" is set to "1"
    - fixed compilation of non-debug build with NO_ASSERT

    create_report
    - fixed some clang-tidy warnings
    - fixed Cppcheck warnings
    - fixed some CLion inspection warnings
    - improved error reporting of report type 4 (speed)
    - fixed incorrect "executed" count in the summary when "use_autosave" is set to "1"
    - added "executed with autosave" counter to summary
    - fixed/improved output when "wiki_format" is set to "2"

    create_image_xml
    - fixed some CLion inspection warnings