@@ -4,9 +4,9 @@
 		<option name='report_type' value='0'/>
 		<option name='xml_folder' value='d:\mess\mrt_output'/>
 		<option name='recursive' value='0'/>
-		<option name='output_file' value='d:\report_10.txt'/>
-		<option name='print_stderr' value='1'/>
-		<option name='wiki_format' value='1'/>
+		<option name='output_file' value='d:\report_10.md'/>
+        <option name='print_stderr' value='1'/>
+        <option name='use_markdown' value='1'/>
 		<option name='ignore_exitcode_4' value='1'/>
 		<option name='show_memleaks' value='1'/>
 		<option name='show_clipped' value='1'/>
@@ -31,7 +31,7 @@
 		<option name='xml_folder' value='d:\mame\mrt_output.129u3'/>
 		<option name='compare_folder' value='d:\mame\mrt_output.129u5'/>
 		<option name='output_folder' value='d:\mrt_diff'/>
-		<option name='wiki_format' value='1'/>
+		<option name='use_markdown' value='1'/>
 		<option name='group_data' value='1'/>
 	</comparison>
 	<tagmap>
